# shortest

./: .env  .env.prod  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: directory-structure.md  objective.md  project-setup.md
shortest/: __main__.py  app.py  config.py  main.py
shortest/utils/: cache.py
shortest/v1/: api.py  mutator.py  processor.py
tests/v1/: test_api.py
