[tool.poetry]
name = "shortest"
version = "0.1.0"
description = "A simple URL shortening service"
authors = ["Shashank Srivastav <shashankgrovy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shortest"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
