[tool.poetry]
name = "shortest"
version = "0.1.0"
description = "A simple URL shortening service"
authors = ["Shashank Srivastav <shashankgrovy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shortest"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
black = "^23.10.0"
mypy = "^1.6.1"
httpx = "^0.25.0"
pytest = "^7.4.2"
gunicorn = "^21.2.0"
redis = "^5.0.1"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
